src/process/build/log/idf_py_stderr_output_179968
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:14: error: array size missing in 'array'
  212 |         char array [];
      |              ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:213:15: error: assignment to expression with array type
  213 |         array = *rgb;
      |               ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
